--- a/FrontEnd/src/App.css
+++ b/FrontEnd/src/App.css
@@ -1,42 +1,21 @@
+html, body {
+  height: 100%; /* Ensure the html and body are full height */
+  margin: 0; /* Reset default margin */
+  padding: 0; /* Reset default padding */
+}
+
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  display: flex;
+  flex-direction: column; /* Makes the children stack vertically */
+  min-height: 100%; /* Minimum height is the full viewport height */
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+main {
+  display: flex;
+  flex-direction: column; /* Stack main children vertically */
+  flex: 1; /* Allows main to expand and push the footer to the bottom */
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+.footer-wrap {
+  margin-top: auto; /* Pushes the footer to the bottom */
 }
