--- a/FrontEnd/src/App.css
+++ b/FrontEnd/src/App.css
@@ -4,6 +4,16 @@ html, body {
   padding: 0; /* Reset default padding */
 }
 
+body {
+  background-image: url('./assets//background.jpg'); /* Update the path as necessary */
+  body {
+    background-image: url('./assets/background.jpg'); /* Update the path as necessary */
+    background-size: cover; /* Cover the entire page */
+   
+   
+  }
+}
+
 #root {
   display: flex;
   flex-direction: column; /* Makes the children stack vertically */
