--- a/FrontEnd/src/components/Button/NewAttButton/NewAttButton.css
+++ b/FrontEnd/src/components/Button/NewAttButton/NewAttButton.css
@@ -1,8 +1,8 @@
 .new-att-button {
-  font-size: 1em;
-  padding: 0.5em 1em;
-  margin: 1em;
-  border: 2px solid palevioletred;
+  font-size: 1.5em;
+  padding: 0.5rem 1rem;
+  margin: 1rem;
+  border: 4px solid rgba(118, 156, 57, 0.253);
   border-radius: 3px;
   background: transparent;
   color: palevioletred;
@@ -10,5 +10,9 @@
   transition: all 0.3s ease; 
   text-decoration: none;
   float: right;
+  background-color: rgba(118, 156, 57, 0.253);
+  color: #00420f;
+    font-weight: bold;
+    font-family: "Sacramento", cursive;
 }
 
