--- a/FrontEnd/src/layouts/Header/Header.css
+++ b/FrontEnd/src/layouts/Header/Header.css
@@ -1,12 +1,23 @@
-.header-logo {
-margin: 5px;
-width: 15rem;
-height:10rem ;
-}
+
 
 .header-wrap {
 height: 10vh;
 display:flex;
 justify-content: space-between;
 
+
+}
+
+.header-logo {
+    width: 15rem;
+    height:15rem ;
+    margin-top: -50px;
+}
+
+.header-nav {
+    position: relative; /* Position relative to its normal position */
+    left: -20%; /* Start from the middle */
+    transform: translateX(20%); /* Move it slightly to the right from the middle */
+    margin-top: 150px; /* Lower than the logo */
+    
 }
