--- a/FrontEnd/src/pages/Register/RegisterForm.module.scss
+++ b/FrontEnd/src/pages/Register/RegisterForm.module.scss
@@ -1,43 +1,34 @@
 .registerContainer {
     width: 100%;
-    min-height: 100vh;
+    min-height: 70vh;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     padding: 15px;
-    
-    background-image: url(./images/bg-1.jpg);
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    z-index: 0;
 }
 
 .containerForm{
-    width: 500px;
-    background-color: rgba(255, 255, 255, 0.2);
+    width: 700px;
+    background-color: rgba(118, 156, 57, 0.253);
     border-radius: 10px;
     position: relative;
-    padding: 10px;
-    z-index: 9999;
+    padding: 20px;
     text-align: center;
   }
 
 .formHeading{
-    font-size: 30px;
-    color: #452005;
+    font-size: 40px;
+    color: #00420f;
     font-weight: bold;
     text-transform: uppercase;
     margin-bottom: 40px;
-    font-family: "Pacifico", cursive;
+    font-family: "Sacramento", cursive;
   }
 
 .containerInput{
     width: 100%;
     padding: 10px;
-    border-radius: 5px;
-    border: 1px solid #ccc;
     position: relative;
     z-index: 2;
   }
@@ -45,7 +36,7 @@
     width: calc(100% - 22px);
     padding: 10px;
     border-radius: 5px;
-    border: 1px solid #ccc;
+    border: 1px solid #cccccce8;
     margin-bottom: 1rem;
     box-sizing: border-box;
   }
