--- a/FrontEnd/src/components/Button/RegisterButton/RegisterButton.css
+++ b/FrontEnd/src/components/Button/RegisterButton/RegisterButton.css
@@ -1,17 +1,21 @@
 .register-button {
     font-size: 1.5em;
-    padding: 0.5rem 1rem;
+    padding: 0.5rem 5rem;
     margin: 1rem;
     border: 4px solid rgba(118, 156, 57, 0.253);
-    border-radius: 3px;
-    background: transparent;
-    color: palevioletred;
-    cursor: pointer;
-    transition: all 0.3s ease; 
-    text-decoration: none;
-    float: right;
+    border-radius: 8px;
     background-color: rgba(118, 156, 57, 0.253);
     color: #00420f;
-      font-weight: bold;
-      font-family: "Sacramento", cursive;
+    font-weight: bold;
+    font-family: "Sacramento", cursive;
+    cursor: pointer;
+ 
+  }
+
+  .button-container {
+ 
+    display: flex;
+    justify-content: center; 
+    align-items: center; 
+   
   }
