--- a/FrontEnd/src/components/Input/Input.module.scss
+++ b/FrontEnd/src/components/Input/Input.module.scss
@@ -1,6 +1,6 @@
-.input {
-    padding: 10px;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-    font-size: 16px;
-}
+// .input {
+//     padding: 10px;
+//     border-radius: 5px;
+//     border: 1px solid #ccc;
+//     font-size: 16px;
+// }
