--- a/FrontEnd/src/components/Button/NewAttButton/NewAttButton.scss
+++ b/FrontEnd/src/components/Button/NewAttButton/NewAttButton.scss
@@ -2,11 +2,11 @@
   font-size: 1.5em;
   padding: 0.5rem 1.5rem;
   margin: 1rem;
-  border: 4px solid rgba(118, 156, 57, 0.253);
+  border: 4px solid #00420fc5;
   border-radius: 8px;
   text-decoration: none;
   float: right;
-  background-color: rgba(118, 156, 57, 0.548);
+  background-color: #e6e6e6;
   color: #00420f;
   font-weight: bold;
   font-family: "Sacramento", cursive;
