added new color to NewAttButton

--- a/FrontEnd/src/components/Button/NewAttButton/NewAttButton.scss
+++ b/FrontEnd/src/components/Button/NewAttButton/NewAttButton.scss
@@ -6,7 +6,7 @@
   border-radius: 8px;
   text-decoration: none;
   float: right;
-  background-color: #e6e6e6;
+  background-color: #f8f9f5c5;
   color: #00420f;
   font-weight: bold;
   font-family: "Sacramento", cursive;
